Updated json file "3rd API request" path

--- a/html-Github-Api-requests-all.html
+++ b/html-Github-Api-requests-all.html
@@ -70,7 +70,8 @@
         const inital_repo = "test-repository-1";
         const project_info_folder = "project-information";
         const project_info_file = "project-information.json";
-        const project_info_path = "project-information/project-information.json";
+        //const project_info_path = "project-information/project-information.json";
+        const project_info_path = "project-information.json";
         
         var api_url_test = new URL(url+"/orgs"+"/"+org+"/repos");
         document.getElementById("api_url_test").textContent = api_url_test;
